Clean deprecated code